SERVER-28836 examine waitpid return values